--- a/src/widgets/Pages/LogIn/CheckEmailChildrenPage/ui/_CheckEmailChildrenPage.module.scss
+++ b/src/widgets/Pages/LogIn/CheckEmailChildrenPage/ui/_CheckEmailChildrenPage.module.scss
@@ -1,5 +1,5 @@
 .socialButton{
-    background-color: var(--secondary-surface-low) !important;
+    background-color: var(--secondary-surface-sub) !important;
 
     &:hover {
         background-color: var(--secondary-surface) !important;
